--- a/schedule.html
+++ b/schedule.html
@@ -2,34 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="format-detection" content="telephone=no">
     <title>Main page</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <link rel="stylesheet" href="style.css">
-    
+    <link rel="stylesheet" href="https://unpkg.com/medium-zoom/dist/medium-zoom.css">
 </head>
 <body>
-    <script src="https://unpkg.com/medium-zoom"></script>
-
-    <!-- Initialize medium-zoom on the zoomable image -->
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            const zoomableImages = document.querySelectorAll('.zoomable-image');
-            mediumZoom(zoomableImages);
-        });
-    </script>
 
     <div id="sch">
         <div class="image-frame">
             <img src="images/33212.jpg" alt="Huyatina Image">
         </div>
         <h1>Schedule</h1>
+        <img src="images/check2.jpg" class="zoomable-image">
         <img src="images/tocheck.jpg" class="zoomable-image">
-        <img src="images/tocheck.jpg" class="zoomable-image">
-        <img src="images/tocheck.jpg" class="zoomable-image">
+        <img src="images/zalupa.png" class="zoomable-image">
         <img src="images/ысрувгду.jpg" class="zoomable-image">
         <img src="images/tocheck.jpg" class="zoomable-image">
         <button id="back">Back</button>
@@ -41,7 +32,16 @@
             window.location.href = "https://carrion626.github.io/home.html";
         })
     </script>
-  
+
+    <script src="https://unpkg.com/medium-zoom"></script>
+
+    <!-- Initialize medium-zoom on your zoomable images -->
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const zoomableImages = document.querySelectorAll('.zoomable-image');
+            mediumZoom(zoomableImages);
+        });
+    </script>
 
 </body>
 </html>
