--- a/schedule.html
+++ b/schedule.html
@@ -9,7 +9,6 @@
     <title>Main page</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://unpkg.com/medium-zoom/dist/medium-zoom.css">
 </head>
 <body>
 
@@ -18,7 +17,9 @@
             <img src="images/logo.jpg" alt="Huyatina Image">
         </div>
         <h1>Schedule</h1>
-        <img src="images/check2.jpg" class="zoomable-image">
+        <img src="images/check2.jpg">
+        <img src="images/check2.jpg">
+
         <img src="images/tocheck.jpg" class="zoomable-image">
         <img src="images/zalupa.png" class="zoomable-image">
         <img src="images/ысрувгду.jpg" class="zoomable-image">
