--- a/schedule.html
+++ b/schedule.html
@@ -9,6 +9,7 @@
     <title>Main page</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://unpkg.com/medium-zoom/dist/medium-zoom.css">
 </head>
 <body>
 
@@ -17,10 +18,8 @@
             <img src="images/logo.jpg" alt="Huyatina Image">
         </div>
         <h1>Schedule</h1>
-        <img src="images/check2.jpg">
-        <img src="images/check2.jpg">
-
-        <img src="images/tocheck.jpg" class="zoomable-image">
+        <img src="images/check2.jpg" class="zoomable-image">
+        <img src="images/tocheck.jpg">
         <img src="images/zalupa.png" class="zoomable-image">
         <img src="images/ысрувгду.jpg" class="zoomable-image">
         <img src="images/tocheck.jpg" class="zoomable-image">
@@ -34,6 +33,7 @@
         })
     </script>
 
+    <script src="https://unpkg.com/medium-zoom"></script>
 
     <!-- Initialize medium-zoom on your zoomable images -->
     <script>
