--- a/schedule.html
+++ b/schedule.html
@@ -19,7 +19,7 @@
         </div>
         <h1>Schedule</h1>
         <img src="images/check2.jpg" class="zoomable-image">
-        <img src="images/tocheck.jpg">
+        <img src="images/tocheck.jpg" class="zoomable-image">
         <img src="images/zalupa.png" class="zoomable-image">
         <img src="images/ысрувгду.jpg" class="zoomable-image">
         <img src="images/tocheck.jpg" class="zoomable-image">
