--- a/programm.html
+++ b/programm.html
@@ -9,6 +9,7 @@
     <title>Main page</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://unpkg.com/medium-zoom/dist/medium-zoom.css">
 </head>
 <body>
 
@@ -41,6 +42,16 @@
         back.addEventListener("click", async (event) => {
             window.location.href = "https://carrion626.github.io/home.html";
         })
+    </script>
+
+    <script src="https://unpkg.com/medium-zoom"></script>
+
+    <!-- Initialize medium-zoom on your zoomable images -->
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const zoomableImages = document.querySelectorAll('.zoomable-image');
+            mediumZoom(zoomableImages);
+        });
     </script>
 
 </body>
