--- a/route.html
+++ b/route.html
@@ -9,6 +9,7 @@
     <title>Main page</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://unpkg.com/medium-zoom/dist/medium-zoom.css">
 </head>
 <body>
 
@@ -37,6 +38,16 @@
         map.addEventListener("click", async (event) => {
             window.location.href = "https://www.google.com/maps/place/%D0%9F%D1%80%D0%B5%D0%BE%D0%B1%D1%80%D0%B0%D0%B6%D0%B5%D0%BD%D1%81%D0%BA%D0%B8%D0%B9+%D0%BF%D0%B0%D1%80%D0%BA/@46.4632743,30.7140641,14z/data=!4m15!1m8!3m7!1s0x40c6318a0b864c43:0x129f8fe28cf2176c!2z0J7QtNC10YHRgdCwLCDQntC00LXRgdGB0LrQsNGPINC-0LHQu9Cw0YHRgtGMLCDQo9C60YDQsNC40L3QsCwgNjUwMDA!3b1!8m2!3d46.4702111!4d30.7306393!16zL20vMGZmbXA!3m5!1s0x40c6322a669dbfad:0x5988a07aa870d0b6!8m2!3d46.4659795!4d30.7294358!16s%2Fg%2F1vnrjjfd?entry=ttu";
         })
+    </script>
+
+    <script src="https://unpkg.com/medium-zoom"></script>
+
+    <!-- Initialize medium-zoom on your zoomable images -->
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const zoomableImages = document.querySelectorAll('.zoomable-image');
+            mediumZoom(zoomableImages);
+        });
     </script>
 
 </body>
