--- a/home.html
+++ b/home.html
@@ -70,8 +70,9 @@
         });
 
         chat.addEventListener("click", () => {
-            window.location.href = "https://miro.com/app/board/uXjVN4lad2k=/";
-        })
+            let telegramChatLink = "https://t.me/Konstantin_Odessit";
+            tg.openTelegramLink(telegramChatLink);
+        });
 
     </script>
 </body>
