--- a/index.html
+++ b/index.html
@@ -120,9 +120,11 @@
                     // Server successfully processed the request
                     let responseData = await response.json();
                     console.log(responseData);
-
-                    // Redirect or perform other actions based on the response
+                    tg.showAlert("Registration successful!", () => {
+                    // Callback function after the alert is closed
+                    // Redirect to the home page
                     window.location.href = 'https://carrion626.github.io/home.html';
+                });
                 } else {
                     console.error('Server returned an error:', response.status);
                 }
