--- a/route.html
+++ b/route.html
@@ -23,8 +23,10 @@
         <img src="images/fhfhfh.jpeg" class="zoomable-image">        
         <img src="images/fhfhfh.jpeg" class="zoomable-image">
         <img src="images/fhfhfh.jpeg" class="zoomable-image">
-        <button id="back">Back</button>
-        <button id="map">Map</button>
+        <div class="button-container">
+            <button id="back">Back</button>
+            <button id="map">Map</button>
+        </div>
     </div>
 
     <script>
