--- a/presentation.html
+++ b/presentation.html
@@ -18,24 +18,39 @@
         </div>
         <h1>Presentations</h1>
         <h1>Some names of speakers</h1>
-        <button class="speaker">Dolboeb</button>
-        <button class="speaker">Daun</button>
-        <button class="speaker">Mudila</button>
+        <button class="speaker" data-file-path="Копия RTC Pre-Test I 2019.docx.pdf">Dolboeb</button>
+        <button class="speaker" data-file-path="Копия RTC Pre-Test I 2019.docx.pdf">Daun</button>
+        <button class="speaker" data-file-path="Копия RTC Pre-Test I 2019.docx.pdf">Mudila</button>
         
         <button id="back">Back</button>
     </div>
 
     <script>
         let back = document.getElementById("back");
-        let map = document.getElementById("map");
 
         back.addEventListener("click", async (event) => {
             window.location.href = "https://carrion626.github.io/home.html";
         })
 
-        // map.addEventListener("click", async (event) => {
-        //     window.location.href = "https://www.google.com/maps/place/%D0%9F%D1%80%D0%B5%D0%BE%D0%B1%D1%80%D0%B0%D0%B6%D0%B5%D0%BD%D1%81%D0%BA%D0%B8%D0%B9+%D0%BF%D0%B0%D1%80%D0%BA/@46.4632743,30.7140641,14z/data=!4m15!1m8!3m7!1s0x40c6318a0b864c43:0x129f8fe28cf2176c!2z0J7QtNC10YHRgdCwLCDQntC00LXRgdGB0LrQsNGPINC-0LHQu9Cw0YHRgtGMLCDQo9C60YDQsNC40L3QsCwgNjUwMDA!3b1!8m2!3d46.4702111!4d30.7306393!16zL20vMGZmbXA!3m5!1s0x40c6322a669dbfad:0x5988a07aa870d0b6!8m2!3d46.4659795!4d30.7294358!16s%2Fg%2F1vnrjjfd?entry=ttu";
-        // })
+    </script>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            // Get all buttons with the class "speaker"
+            const speakerButtons = document.querySelectorAll('.speaker');
+
+            // Add click event listener to each button
+            speakerButtons.forEach(function (button) {
+                button.addEventListener('click', function () {
+                    // Extract the data-file-path attribute
+                    const filePath = button.getAttribute('data-file-path');
+
+                    // Send an AJAX request or perform any other action with the file path
+                    // For simplicity, you can alert the file path (replace this with your logic)
+                    alert('PDF File Path: ' + filePath);
+                });
+            });
+        });
     </script>
 
 </body>
