--- a/presentation.html
+++ b/presentation.html
@@ -18,9 +18,9 @@
         </div>
         <h1>Presentations</h1>
         <h1>Some names of speakers</h1>
-        <button class="speaker" data-file-path="Копия RTC Pre-Test I 2019.docx.pdf">Dolboeb</button>
-        <button class="speaker" data-file-path="Копия RTC Pre-Test I 2019.docx.pdf">Daun</button>
-        <button class="speaker" data-file-path="Копия RTC Pre-Test I 2019.docx.pdf">Mudila</button>
+        <button class="speaker" onclick="handleSpeakerClick('speaker1')">Dolboeb</button>
+        <button class="speaker" onclick="handleSpeakerClick('speaker2')">Daun</button>
+        <button class="speaker" onclick="handleSpeakerClick('speaker3')">Mudila</button>
         
         <button id="back">Back</button>
     </div>
@@ -30,27 +30,16 @@
 
         back.addEventListener("click", async (event) => {
             window.location.href = "https://carrion626.github.io/home.html";
-        })
-
-    </script>
-
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            // Get all buttons with the class "speaker"
-            const speakerButtons = document.querySelectorAll('.speaker');
-
-            // Add click event listener to each button
-            speakerButtons.forEach(function (button) {
-                button.addEventListener('click', function () {
-                    // Extract the data-file-path attribute
-                    const filePath = button.getAttribute('data-file-path');
-
-                    // Send an AJAX request or perform any other action with the file path
-                    // For simplicity, you can alert the file path (replace this with your logic)
-                    alert('PDF File Path: ' + filePath);
-                });
-            });
         });
+
+        function handleSpeakerClick(speakerId) {
+            // You can send a request to your backend (Flask server) here
+            // to notify the bot about the speaker click and provide the corresponding PDF file.
+            // You may use fetch() or other methods to send the request.
+            // For simplicity, let's assume you're notifying the bot via the browser console.
+
+            console.log(`Speaker clicked: ${speakerId}`);
+        }
     </script>
 
 </body>
