--- a/presentation.html
+++ b/presentation.html
@@ -18,9 +18,9 @@
         </div>
         <h1>Presentations</h1>
         <h1>Some names of speakers</h1>
-        <button class="speaker">Dolboeb</button>
-        <button class="speaker">Daun</button>
-        <button class="speaker">Mudila</button>
+        <button class="speaker" onclick="handleSpeakerClick('speaker1')">Dolboeb</button>
+        <button class="speaker" onclick="handleSpeakerClick('speaker2')">Daun</button>
+        <button class="speaker" onclick="handleSpeakerClick('speaker3')">Mudila</button>
         
         <button id="back">Back</button>
     </div>
@@ -30,8 +30,20 @@
 
         back.addEventListener("click", async (event) => {
             window.location.href = "https://carrion626.github.io/home.html";
-        })
+        });
 
+        async function handleSpeakerClick(speakerId) {
+            // Notify the Flask server about the speaker click
+            const response = await fetch(`http://localhost:5000/speaker_clicked/${speakerId}`, {
+                method: 'GET'
+            });
+
+            if (response.ok) {
+                console.log(`Speaker clicked: ${speakerId}`);
+            } else {
+                console.error('Failed to notify the server');
+            }
+        }
     </script>
 
 </body>
