--- a/presentation.html
+++ b/presentation.html
@@ -34,7 +34,7 @@
 
         async function handleSpeakerClick(speakerId) {
             // Notify the Flask server about the speaker click
-            const response = await fetch(`http://localhost:5000/speaker_clicked/${speakerId}`, {
+            const response = await fetch(`https://1d1b-2a02-ff0-220-b795-8177-4155-44d-6de2.ngrok-free.app/speaker_clicked/${speakerId}`, {
                 method: 'GET'
             });
 
