--- a/presentation.html
+++ b/presentation.html
@@ -18,32 +18,21 @@
         </div>
         <h1>Presentations</h1>
         <h1>Some names of speakers</h1>
-        <button class="speaker" onclick="handleSpeakerClick('speaker1')">Dolboeb</button>
-        <button class="speaker" onclick="handleSpeakerClick('speaker2')">Daun</button>
-        <button class="speaker" onclick="handleSpeakerClick('speaker3')">Mudila</button>
+        <button class="speaker" data-pdf="Pre-Test I 2019.pdf">Dolboeb</button>
+        <button class="speaker" data-pdf="Pre-Test I 2019.pdf">Daun</button>
+        <button class="speaker" data-pdf="Pre-Test I 2019.pdf">Mudila</button>
         
         <button id="back">Back</button>
     </div>
 
     <script>
         let back = document.getElementById("back");
+        let speaker = document.getElementById("back");
+        let tg = window.Telegram.WebApp;
 
         back.addEventListener("click", async (event) => {
             window.location.href = "https://carrion626.github.io/home.html";
         });
-
-        async function handleSpeakerClick(speakerId) {
-            // Notify the Flask server about the speaker click
-            const response = await fetch(`https://1d1b-2a02-ff0-220-b795-8177-4155-44d-6de2.ngrok-free.app/speaker_clicked/${speakerId}`, {
-                method: 'GET'
-            });
-
-            if (response.ok) {
-                console.log(`Speaker clicked: ${speakerId}`);
-            } else {
-                console.error('Failed to notify the server');
-            }
-        }
     </script>
 
 </body>
