--- a/home.html
+++ b/home.html
@@ -58,7 +58,12 @@
         });
 
         link.addEventListener("click", () => {
-            window.location.href = "https://miro.com/app/board/uXjVN4lad2k=/";
+            let link = "https://miro.com/app/board/uXjVN4lad2k=/";
+            tg.sendMessage({
+                text: `Here is your link: ${link}`,
+                with_webview: 1
+            });
+            tg.openLink(link, { background: false });
         })
 
         programm.addEventListener("click", () => {
