--- a/home.html
+++ b/home.html
@@ -59,10 +59,10 @@
 
         link.addEventListener("click", () => {
             let link = "https://miro.com/app/board/uXjVN4lad2k=/";
-            tg.sendMessage({
-                text: `Here is your link: ${link}`,
-                with_webview: 1
-            });
+            // tg.sendMessage({
+            //     text: `Here is your link: ${link}`,
+            //     with_webview: 1
+            // });
             tg.openLink(link, { background: false });
         })
 
