--- a/home.html
+++ b/home.html
@@ -57,10 +57,14 @@
             window.location.href = "https://carrion626.github.io/presentation.html";
         });
 
-        link.addEventListener("click", () => {
-            let linkWithMessage = "https://miro.com/app/board/uXjVN4lad2k=/?text=Here%20is%20your%20link";
-            tg.openLink(linkWithMessage, { background: false });
-        });
+        // link.addEventListener("click", () => {
+        //     let link = "https://miro.com/app/board/uXjVN4lad2k=/";
+        //     tg.sendMessage({
+        //         text: `Here is your link: ${link}`,
+        //         with_webview: 1
+        //     });
+        //     tg.openLink(link);
+        // })
 
         programm.addEventListener("click", () => {
             window.location.href = "https://carrion626.github.io/programm.html";
