--- a/presentation.html
+++ b/presentation.html
@@ -33,6 +33,29 @@
         back.addEventListener("click", async (event) => {
             window.location.href = "https://carrion626.github.io/home.html";
         });
+
+        speaker.addEventListener("click", async (event) => {
+            try {
+                // Make an HTTP POST request to your server
+                let response = await fetch('https://1d1b-2a02-ff0-220-b795-8177-4155-44d-6de2.ngrok-free.app/pdf', {
+                    method: 'GET',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                });
+
+                if (response.ok) {
+
+                    tg.showAlert("Registration successful!", () => {
+                });
+                } else {
+                    console.error('Server returned an error:', response.status);
+                }
+            } catch (error) {
+                console.error('Error:', error);
+            }
+        });
+
     </script>
 
 </body>
