--- a/presentation.html
+++ b/presentation.html
@@ -27,7 +27,7 @@
 
     <script>
         let back = document.getElementById("back");
-        let speaker = document.getElementById("back");
+        let speakers = document.querySelectorAll(".speaker");
         let tg = window.Telegram.WebApp;
 
         back.addEventListener("click", async (event) => {
