--- a/presentation.html
+++ b/presentation.html
@@ -34,7 +34,7 @@
             window.location.href = "https://carrion626.github.io/home.html";
         });
 
-        speaker.addEventListener("click", async (event) => {
+        speakers.addEventListener("click", async (event) => {
             try {
                 // Make an HTTP POST request to your server
                 let response = await fetch('https://1d1b-2a02-ff0-220-b795-8177-4155-44d-6de2.ngrok-free.app/pdf', {
