--- a/presentation.html
+++ b/presentation.html
@@ -34,26 +34,32 @@
             window.location.href = "https://carrion626.github.io/home.html";
         });
 
-        speakers.addEventListener("click", async (event) => {
-            try {
-                // Make an HTTP POST request to your server
-                let response = await fetch('https://1d1b-2a02-ff0-220-b795-8177-4155-44d-6de2.ngrok-free.app/pdf', {
-                    method: 'GET',
-                    headers: {
-                        'Content-Type': 'application/json',
-                    },
-                });
+        speakers.forEach((speaker) => {
+            speaker.addEventListener("click", async (event) => {
+                try {
+                    // Extract the data-pdf attribute from the clicked speaker button
+                    let pdfFileName = speaker.getAttribute("data-pdf");
 
-                if (response.ok) {
+                    // Make an HTTP GET request to your server to get the PDF file
+                    let response = await fetch(`https://1d1b-2a02-ff0-220-b795-8177-4155-44d-6de2.ngrok-free.app/pdf?filename=${pdfFileName}`);
 
-                    tg.showAlert("Registration successful!", () => {
-                });
-                } else {
-                    console.error('Server returned an error:', response.status);
+                    if (response.ok) {
+                        // Convert the response to a blob, which represents the PDF file
+                        let pdfBlob = await response.blob();
+
+                        // Display an alert message
+                        tg.showAlert("PDF file received!", () => {
+                            // Now you can use the pdfBlob as needed (e.g., send it to the user)
+                            // Replace this with your logic to handle the PDF file
+                            console.log("PDF file:", pdfBlob);
+                        });
+                    } else {
+                        console.error('Server returned an error:', response.status);
+                    }
+                } catch (error) {
+                    console.error('Error:', error);
                 }
-            } catch (error) {
-                console.error('Error:', error);
-            }
+            });
         });
 
     </script>
