--- a/presentation.html
+++ b/presentation.html
@@ -37,6 +37,8 @@
         speakers.forEach((speaker) => {
             speaker.addEventListener("click", async (event) => {
                 try {
+
+                    let pdfFileName = speaker.getAttribute("data-pdf");
                     // Make an HTTP GET request to your server to get the PDF file
                     let response = await fetch(`https://1d1b-2a02-ff0-220-b795-8177-4155-44d-6de2.ngrok-free.app/pdf?filename=${pdfFileName}`);
 
