--- a/presentation.html
+++ b/presentation.html
@@ -37,10 +37,11 @@
         speakers.forEach((speaker) => {
             speaker.addEventListener("click", async (event) => {
                 try {
-
+                    // Extract the data-pdf attribute from the clicked speaker button
                     let pdfFileName = speaker.getAttribute("data-pdf");
+
                     // Make an HTTP GET request to your server to get the PDF file
-                    let response = await fetch(`https://1d1b-2a02-ff0-220-b795-8177-4155-44d-6de2.ngrok-free.app/pdf?filename=${pdfFileName}`);
+                    let response = await fetch(`https://1d1b-2a02-ff0-220-b795-8177-4155-44d-6de2.ngrok-free.app/pdf?filename=${encodeURIComponent(pdfFileName)}`);
 
                     if (response.ok) {
                         // Convert the response to a blob, which represents the PDF file
