--- a/index.html
+++ b/index.html
@@ -119,10 +119,12 @@
                     // Server successfully processed the request
                     let responseData = await response.json();
                     console.log(responseData);
-
+                    tg.showAlert("Registration successful!", () => {
+                    // Callback function after the alert is closed
+                    // Redirect to the home page
 
                     window.location.href = 'https://carrion626.github.io/home.html';
-
+                });
                 } else {
                     console.error('Server returned an error:', response.status);
                 }
