--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 name: name,
                 last_name: last_name,
                 email: email,
-                tel: tel
+                tel: tel,
             };
             
 
