--- a/contacts.html
+++ b/contacts.html
@@ -14,9 +14,11 @@
 
     <div id="cts">
         <div class="image-frame">
-            <img src="images/33212.jpg" alt="Huyatina Image">
+            <img src="images/logo.jpg" alt="Huyatina Image">
         </div>
-        <h1>WHAT?</h1>
+        <h1>CONTACT US</h1>
+        <h1>OR NOT</h1>
+        <button>or yes?</button>
 
         
         <button id="back">Back</button>
