--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
 <body>
     <div id="home">
         <div class="image-frame">
-            <img src="images/huyatina.jpg" alt="Huyatina Image">
+            <img src="images/logo.jpg" alt="Huyatina Image">
         </div>
         <h1>Home Page</h1>
         <button id="register2">Register</button>
