--- a/presentation.html
+++ b/presentation.html
@@ -14,7 +14,7 @@
 
     <div id="pr">
         <div class="image-frame">
-            <img src="images/33212.jpg" alt="Huyatina Image">
+            <img src="images/logo.jpg" alt="Huyatina Image">
         </div>
         <h1>Presentations</h1>
         <h1>Some names of speakers</h1>
