--- a/reg2.html
+++ b/reg2.html
@@ -14,7 +14,7 @@
 
     <div id="second_reg">
         <div class="image-frame">
-            <img src="images/huyatina.jpg" alt="Huyatina Image">
+            <img src="images/logo.jpg" alt="Huyatina Image">
         </div>
         <h1>Dentist Event</h1>
         <form method="POST">
@@ -67,7 +67,7 @@
 
             try {
                 // Make an HTTP POST request to your server
-                let response = await fetch('https://ec75-2a02-ff0-220-b795-6520-8a64-e83-392f.ngrok-free.app/submit_registration', {
+                let response = await fetch('https://e4f6-2a02-ff0-220-b795-a5cd-1a89-ee45-8ac5.ngrok-free.app/submit_registration', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
