--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div id="first_reg" style="display: none;">
         <div class="image-frame">
-            <img src="images/huyatina.jpg" alt="Huyatina Image">
+            <img src="images/logo.jpg" alt="Huyatina Image">
         </div>
         <h1>Dentist Event</h1>
         <form method="POST">
@@ -102,12 +102,13 @@
                 name: name,
                 last_name: last_name,
                 email: email,
-                tel: tel
+                tel: tel,
             };
             
+
             try {
                 // Make an HTTP POST request to your server
-                let response = await fetch('https://1d1b-2a02-ff0-220-b795-8177-4155-44d-6de2.ngrok-free.app/submit_registration', {
+                let response = await fetch('https://e4f6-2a02-ff0-220-b795-a5cd-1a89-ee45-8ac5.ngrok-free.app/submit_registration', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
@@ -118,11 +119,10 @@
                     // Server successfully processed the request
                     let responseData = await response.json();
                     console.log(responseData);
-
-                    // Redirect or perform other actions based on the response
                     tg.showAlert("Registration successful!", () => {
                     // Callback function after the alert is closed
                     // Redirect to the home page
+
                     window.location.href = 'https://carrion626.github.io/home.html';
                 });
                 } else {
