--- a/programm.html
+++ b/programm.html
@@ -15,7 +15,7 @@
 
     <div id="pgm">
         <div class="image-frame">
-            <img src="images/33212.jpg" alt="Huyatina Image">
+            <img src="images/logo.jpg" alt="Huyatina Image">
         </div>
         <h1>Programm</h1>
         <p id="programmText">Some text up to 1000 chars</p>
