--- a/route.html
+++ b/route.html
@@ -15,7 +15,7 @@
 
     <div id="rt">
         <div class="image-frame">
-            <img src="images/33212.jpg" alt="Huyatina Image">
+            <img src="images/logo.jpg" alt="Huyatina Image">
         </div>
         <h1>Route</h1>
         <img src="images/fhfhfh.jpeg" class="zoomable-image">
