--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
 
     <script>
-        const images = ['huyatina.jpg', 'fhfhfh.jpeg', '33212.jpg', 'ысрувгду.jpg', 'huyatina.jpg'];
+        const images = ['logo.jpg', 'check2.jpg', 'tocheck.jpg', 'ысрувгду.jpg', 'logo.jpg'];
         let currentIndex = 0;
         
 
