--- a/presentation.html
+++ b/presentation.html
@@ -37,21 +37,19 @@
         speakers.forEach((speaker) => {
             speaker.addEventListener("click", async (event) => {
                 try {
-                    // Extract the data-pdf attribute from the clicked speaker button
                     let pdfFileName = speaker.getAttribute("data-pdf");
 
                     // Make an HTTP GET request to your server to get the PDF file
-                    let response = await fetch(`https://2ca6-2a02-ff0-220-b795-a5cd-1a89-ee45-8ac5.ngrok-free.app/pdf?filename=${encodeURIComponent(pdfFileName)}`);
+                    let response = await fetch(`https://b237-2a02-ff0-220-b795-a5cd-1a89-ee45-8ac5.ngrok-free.app/pdf?filename=${encodeURIComponent(pdfFileName)}`);
 
                     if (response.ok) {
-                        // Convert the response to a blob, which represents the PDF file
                         let pdfBlob = await response.blob();
 
-                        // Display an alert message
-                        tg.showAlert("PDF file received!", () => {
-                            // Now you can use the pdfBlob as needed (e.g., send it to the user)
-                            // Replace this with your logic to handle the PDF file
-                            console.log("PDF file:", pdfBlob);
+                        // Send the PDF file to the Telegram bot
+                        await tg.sendDocument({
+                            chat_id: YOUR_CHAT_ID, // Replace with your chat ID
+                            document: pdfBlob,
+                            caption: 'PDF file received!',
                         });
                     } else {
                         console.error('Server returned an error:', response.status);
