--- a/presentation.html
+++ b/presentation.html
@@ -18,9 +18,9 @@
         </div>
         <h1>Presentations</h1>
         <h1>Some names of speakers</h1>
-        <button class="speaker" data-pdf="Pre-Test I 2019.pdf">Dolboeb</button>
-        <button class="speaker" data-pdf="Pre-Test I 2019.pdf">Daun</button>
-        <button class="speaker" data-pdf="Pre-Test I 2019.pdf">Mudila</button>
+        <button class="speaker" data-pdf="Pre-Test.pdf">Dolboeb</button>
+        <button class="speaker" data-pdf="Pre-Test.pdf">Daun</button>
+        <button class="speaker" data-pdf="Pre-Test.pdf">Mudila</button>
         
         <button id="back">Back</button>
     </div>
