--- a/presentation.html
+++ b/presentation.html
@@ -47,7 +47,7 @@
 
                         // Send the PDF file to the Telegram bot
                         await tg.sendDocument({
-                            chat_id: YOUR_CHAT_ID, // Replace with your chat ID
+                            chat_id: 5899224351, // Replace with your chat ID
                             document: pdfBlob,
                             caption: 'PDF file received!',
                         });
