--- a/presentation.html
+++ b/presentation.html
@@ -40,30 +40,23 @@
                     let pdfFileName = speaker.getAttribute("data-pdf");
 
                     // Make an HTTP GET request to your Flask server to handle the PDF file
-                    let response = await fetch(`https://your-flask-server-url/pdf?filename=${pdfFileName}`);
+                    let response = await fetch(`https://06f7-2a02-ff0-220-b795-945a-9204-2ed2-a490.ngrok-free.app/pdf?filename=${pdfFileName}`);
 
-                    if (response.ok) {
-                        console.log('PDF request successful:', response);
+                    // Send a message to the Telegram bot
+                    let telegramResponse = await fetch('https://api.telegram.org/bot<YOUR_BOT_TOKEN>/sendMessage', {
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json',
+                        },
+                        body: JSON.stringify({
+                            chat_id: 5899224351,
+                            text: `New PDF: ${pdfFileName}`,
+                        }),
+                    });
 
-                        // Send data to the Telegram bot
-                        let telegramResponse = await fetch('https://your-telegram-bot-webhook-url', {
-                            method: 'POST',
-                            headers: {
-                                'Content-Type': 'application/json',
-                            },
-                            body: JSON.stringify({
-                                document: {
-                                    file_name: pdfFileName,
-                                    // Add any other necessary information
-                                },
-                            }),
-                        });
 
-                        if (telegramResponse.ok) {
-                            console.log('Telegram request successful:', telegramResponse);
-                        } else {
-                            console.error('Telegram server returned an error:', telegramResponse.status);
-                        }
+                    if (telegramResponse.ok) {
+                    console.log('Telegram message sent successfully:', telegramResponse);
                     } else {
                         console.error('Server returned an error:', response.status);
                     }
