--- a/presentation.html
+++ b/presentation.html
@@ -36,7 +36,7 @@
     
         const DemoApp = {
             initData: Telegram.WebApp.initData || '',
-            initDataUnsafe: window.Telegram.WebApp.initDataUnsafe || {},
+            initDataUnsafe: Telegram.WebApp.initDataUnsafe || {},
             MainButton: Telegram.WebApp.MainButton,
     
             init(options) {
