--- a/presentation.html
+++ b/presentation.html
@@ -19,7 +19,7 @@
         <h1>Presentations</h1>
         <h1>Some names of speakers</h1>
         <button class="speaker" data-pdf="Pre-Test.pdf">Dolboeb</button>
-        <button class="speaker" data-pdf="Pre-Test.pdf">Daun</button>
+        <button class="speaker" data-pdf="my_resume_n.pdf">Daun</button>
         <button class="speaker" data-pdf="Pre-Test.pdf">Mudila</button>
         
         <button id="back">Back</button>
