--- a/presentation.html
+++ b/presentation.html
@@ -22,7 +22,10 @@
         <button class="speaker" data-pdf="my_resume_n.pdf">Daun</button>
         <button class="speaker" data-pdf="Pre-Test.pdf">Mudila</button>
         
-        <button id="back">Back</button>
+        <button id="back" style="position: fixed;
+        bottom: 20px;
+        left: 50%;
+        transform: translateX(-50%);">Back</button>
     </div>
 
     <script>
