--- a/home.html
+++ b/home.html
@@ -57,14 +57,10 @@
             window.location.href = "https://carrion626.github.io/presentation.html";
         });
 
-        // link.addEventListener("click", () => {
-        //     let link = "https://miro.com/app/board/uXjVN4lad2k=/";
-        //     tg.sendMessage({
-        //         text: `Here is your link: ${link}`,
-        //         with_webview: 1
-        //     });
-        //     tg.openLink(link);
-        // })
+        link.addEventListener("click", () => {
+            let link = "https://miro.com/app/board/uXjVN4lad2k=/";
+            tg.openLink(link);
+        })
 
         programm.addEventListener("click", () => {
             window.location.href = "https://carrion626.github.io/programm.html";
