--- a/presentation.html
+++ b/presentation.html
@@ -18,9 +18,9 @@
         </div>
         <h1>Presentations</h1>
         <h1>Some names of speakers</h1>
-        <button class="speaker" data-pdf="Pre-Test.pdf">Dolboeb</button>
-        <button class="speaker" data-pdf="my_resume_n.pdf">Daun</button>
-        <button class="speaker" data-pdf="Pre-Test.pdf">Mudila</button>
+        <button class="speaker" data-pdf="Pre-Test.pdf">Dmytro Seleba</button>
+        <button class="speaker" data-pdf="my_resume_n.pdf">Andrii Zabolotnyi</button>
+        <button class="speaker" data-pdf="Pre-Test.pdf">Oksana Prychepenska</button>
         
         <button id="back" style="position: fixed;
         bottom: 20px;
