--- a/reg2.html
+++ b/reg2.html
@@ -34,7 +34,7 @@
     <script>
         const registerButton = document.getElementById('register');
 
-
+        let tg = window.Telegram.WebApp;
         let reg = document.getElementById("register");
         let back = document.getElementById("back");
 
